fully fixed parallax on mobile. Had to override stupid parallax image-attachment switching to scroll at 998px :/

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -5,3 +5,32 @@
   max-width:40vh;
   margin:auto;
 }
+
+.parallax{
+  @media(max-width: 991.98px){
+  background-attachment: fixed !important;
+  }
+}
+
+.overlay-text{
+  color: #f0f4ff !important;
+  font-size: 7vw !important;
+  margin: 10vh 40vw 10vh 10vw !important;
+  
+  @media (max-width: 600px){
+  color: #f0f4ff !important;
+  font-size: 12vw !important;
+  margin: 0 !important;
+  padding: 10vh 0 0 0.5rem!important;
+  }
+  
+  .learn-everything{
+  text-align: right !important;
+  padding: 60vh 0 1rem 8rem !important; 
+   @media (max-width: 600px){
+  padding:60vh 1rem 0.5rem 3rem !important; 
+  }
+}
+}
+
+
